@@ -6,6 +6,7 @@ HEAD
 - send local DATE/TIME with CONNECT when in NT-mode.
 - added transfergroup config option to set controllers allowed for transfer.
 - send Sending-Complete if overlap dialing is not used.
+- send Sending-Complete with ALERT_REQ.
 - fixed numberingplan for 'connectedṅumber'.
 - added devicestate option.
 
